--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -35,7 +35,8 @@ jobs:
           bundler-cache: true
       # Add or replace database setup steps here
       - name: Set up database schema
-        run: chmod +x bin/rails \
+        run: |
+          chmod +x bin/rails
           bin/rails db:migrate
       # Add or replace test runners here
       - name: Run tests
