--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -55,14 +55,8 @@ jobs:
           bundler-cache: true
       # Add or replace any other lints here
       - name: Security audit dependencies
-        run: |
-          chmod +x bundle exec bundle audit
-          bundle exec bundle audit --update
+        run: bundle exec bundle audit --update
       - name: Security audit application code
-        run: |
-          chmod +x bundle exec brakeman
-          bundle exec brakeman -q -w2
+        run: bundle exec brakeman -q -w2
       - name: Lint Ruby files
-        run: |
-          chmod +x bundle exec rubocop
-          bundle exec rubocop --parallel
+        run: bundle exec rubocop --parallel
