--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -59,4 +59,6 @@ jobs:
       - name: Security audit application code
         run: bundle exec brakeman -q -w2
       - name: Lint Ruby files
-        run: bundle exec rubocop --parallel --cache false
+        run: |
+          ls -l
+          bundle exec rubocop --parallel --cache false
