--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -60,5 +60,5 @@ jobs:
         run: bundle exec brakeman -q -w2
       - name: Lint Ruby files
         run: |
-          ls -l
+          ls -l bin
           bundle exec rubocop --parallel --cache false
