--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -50,7 +50,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to GitHub container registry
-        #uses: docker/login-action@v1.10.0
+        uses: docker/login-action@v1.10.0
         with:
           registry: ghcr.io
           username: Marcobranceddu
