--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -53,8 +53,8 @@ jobs:
         uses: docker/login-action@v1.10.0
         with:
           registry: ghcr.io
-          username: Marcobranceddu
-          password: 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
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
 
       - name: Lowercase the repo name and username
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
