--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
+          tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
           file: ./Dockerfile
   deploy:
     runs-on: ubuntu-latest
