--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and Publish to Github Packages Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: Marcobranceddu/ProjectISA/dbgevents
+          name: Marcobranceddu/projectisa/dbgevents
           registry: ghcr.io
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.GITHUB_TOKEN }}
@@ -45,8 +45,8 @@ jobs:
           key: ${{ secrets.DEPLOY_KEY }}
           envs: GITHUB_USERNAME, GITHUB_TOKEN
           script: |
-            docker login ghcr.io -u $GITHUB_USERNAME -p $GITHUB_TOKEN
-            docker pull ghcr.io/Marcobranceddu/ProjectISA/dbgevents:latest
-            docker stop projectisa_web
-            docker system prune -f
-            docker run --name projectisa_web -dit -p 3000:3000 ghcr.io/Marcobranceddu/ProjectISA/dbgevents:latest
+            sudo docker login ghcr.io -u $GITHUB_USERNAME -p $GITHUB_TOKEN
+            sudo docker pull ghcr.io/Marcobranceddu/projectisa/dbgevents:latest
+            sudo docker stop projectisa_web
+            sudo docker system prune -f
+            sudo docker run --name projectisa_web -dit -p 3000:3000 ghcr.io/Marcobranceddu/projectisa/dbgevents:latest
