--- a/.github/workflows/deploy-md.yml
+++ b/.github/workflows/deploy-md.yml
@@ -3,14 +3,9 @@ name: Build and Deploy
 # .Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch.
 on:
-  push:
-    branches: [main]
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
+  workflow_run:
+    workflows: ["Ruby on Rails CI"]
+    types: [completed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,6 +13,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
